--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -40,7 +40,7 @@
         android:layout_marginEnd="80dp"
         android:layout_marginBottom="76dp"
         android:onClick="onClick"
-        android:text="Главная страница"
+        android:text="Следующая страница"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent" />
 
